fix: z-indexのトップ値を無限大から削除

--- a/src/renderer/styles/zindex.css
+++ b/src/renderer/styles/zindex.css
@@ -1,5 +1,4 @@
 :root {
-  --zindex-top: calc(infinity);
   --zindex-modal: 50;
   --zindex-node: 40;
   --zindex-connection: 30;
